# ChangeLog for x11-themes/qtcurve
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/qtcurve/ChangeLog,v 1.74 2009/11/08 19:31:13 nixnut Exp $

  21 Mar 2013; Lars Wendler <polynomial-c@gentoo.org> qtcurve-0.59.2.ebuild,
  qtcurve-0.59.5.ebuild, qtcurve-0.65.2.ebuild, qtcurve-0.68.1.ebuild,
  qtcurve-0.69.1.ebuild:
  Fixed dependencies on qt packages.

  08 Nov 2009; nixnut <nixnut@gentoo.org> qtcurve-0.69.1.ebuild:
  ppc stable #290212

  29 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  qtcurve-0.69.1.ebuild:
  stable x86, bug 290212

  26 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> qtcurve-0.69.1.ebuild:
  amd64 stable wrt #290212

  21 Oct 2009; Jeroen Roovers <jer@gentoo.org> qtcurve-0.65.2.ebuild:
  Stable for HPPA (bug #279585).

  18 Oct 2009; Alex Alexander <wired@gentoo.org> -qtcurve-0.64.2.ebuild,
  -qtcurve-0.67.0.ebuild, -qtcurve-0.67.2.ebuild, -qtcurve-0.68.0.ebuild,
  -qtcurve-0.69.0.ebuild, metadata.xml:
  removed old versions - switched maintainer to qt herd

*qtcurve-0.69.1 (14 Oct 2009)

  14 Oct 2009; Alex Alexander <wired@gentoo.org> +qtcurve-0.69.1.ebuild:
  version bump

*qtcurve-0.69.0 (09 Oct 2009)

  09 Oct 2009; Krzysiek Pawlik <nelchael@gentoo.org> +qtcurve-0.69.0.ebuild:
  Version bump.

  27 Sep 2009; nixnut <nixnut@gentoo.org> qtcurve-0.65.2.ebuild:
  ppc stable #279585

*qtcurve-0.68.1 (17 Sep 2009)

  17 Sep 2009; Alex Alexander <wired@gentoo.org> +qtcurve-0.68.1.ebuild:
  version bump

  28 Aug 2009; Tobias Klausmann <klausman@gentoo.org> qtcurve-0.65.2.ebuild:
  Stable on alpha, bug #279585

*qtcurve-0.68.0 (27 Aug 2009)

  27 Aug 2009; Alex Alexander <wired@gentoo.org> +qtcurve-0.68.0.ebuild:
  version bump

*qtcurve-0.67.2 (13 Aug 2009)

  13 Aug 2009; Ben de Groot <yngwin@gentoo.org> +qtcurve-0.67.2.ebuild:
  Version bump

  03 Aug 2009; Markus Meier <maekke@gentoo.org> qtcurve-0.65.2.ebuild:
  amd64/x86 stable, bug #279585
