@@ -1,12 +1,6 @@
-DIST QtCurve-KDE3-0.59.2.tar.bz2 100886 SHA256 61cefb74d81493f2217d6f7742b24e6ecd2d0fcab664b60879be69da5422fb9d
-DIST QtCurve-KDE3-0.59.5.tar.bz2 100939 SHA256 d05d3fe510502516e552a56d63fafc95bc8df1e45353f351f40a2837215bac7f
-DIST QtCurve-KDE3-0.65.2.tar.bz2 115376 SHA256 78abe060070fd218d153bc5eb2e7bd14254faf1470d740bfb088c78480dc2228
-DIST QtCurve-KDE3-0.68.1.tar.bz2 128747 SHA256 ac1a5bb01318ba487eba5286f077beb486e7fa434647a15bd02610d9eee2e8de
 DIST QtCurve-KDE3-0.69.1.tar.bz2 130133 SHA256 93b7537e85c338b0b4ff3214dd78cad00ea4ec361f5a95516a403a4bb6ff915c
-EBUILD qtcurve-0.59.2.ebuild 856 SHA256 9e0b0db3b9282bd8f0ffe8644195ab9ba6ea32ece4a0111ba3ade08b5cbfbcd4 SHA512 6abfff808f26a0f22df363054b1e6db7502ab9e088b1a10be896d3dfcbe7226402726fb7075f5e3938a279ca2f29c14ab54a8593257ed8dceef09f21a9cba60b WHIRLPOOL beddc2d89f5799d68fc55eb819fe8dc9e1f039ceca0a523f053674ee753d50f73c3639ca7041c75f7bbb7fe7d4389639643a33a4f128fd017df57f2ab8833e4b
-EBUILD qtcurve-0.59.5.ebuild 862 SHA256 927a0e6ff829ecf4fbb359ab3387a75400f6e18762e5b644d21404dd1751fd05 SHA512 3ecea6e77d7ba283c9ca9d16b992f721b0a2cc550f2c62b93615039138debb5f13bb9ee505682c9058e29ab79dd1d95d42f4f09d760507c56337286b73e91df2 WHIRLPOOL bc8664e7b0a3a614d00d95be4328d41fb0c181117b58d903be4679c68979c85c5199f1511b8c5b2898383f0cce05e96e3b814ac27113add1cc26abb8c39d9305
-EBUILD qtcurve-0.65.2.ebuild 838 SHA256 778bb2e6c467934cb88c3d03181f9648a95cffe54579ff07bf7397a6bcf04273 SHA512 d87670a817327081392ab57fdc0d9cf66abc1b35cab0ae806e8aea6051d7d01f726e39e40707c54220e898fe3e8345600875e509399a2523fe8770afa25b50a9 WHIRLPOOL c553ff5128f6b06a4afc32b964ececfbaa7077ed16b3521e8db1ce7575ff4970427c7ce3eb6fd4cd5e693d4a24279f02b116d27dbdf96bc9c0413b6b2e5c6aae
-EBUILD qtcurve-0.68.1.ebuild 845 SHA256 146b540e6c5e3f3f5afd7dcacb5741110ba68bd5a4e9a0ba9964dc021d629fef SHA512 8e4757baca56c2c94e9e24ec0d33901776f6e673bc718c4062dee447cedf8e9d65162553adaffcb69561bca74a4f2f988648f725c471c54c28307bbe23e3feec WHIRLPOOL a57cbcde9b2d511ddcc4c13e3020892f8965fe5da0a99bb3c01256d79fe25bbf62289bc132723c058ba264bfb0bbc12703f5219d9aff90d916342df566df0e1c
-EBUILD qtcurve-0.69.1.ebuild 843 SHA256 d6ab92752b931522bff80740e044a79e48329ee284108433b87a1e97a58ba2fe SHA512 292bf0830f29b5ca772327bb63f5d4b0a47dee0653cdccf6b5f881a6a6f14a63a7ee6a53106246598685a34ca99b5528456b09a7ce611a02c66013afcbfad39d WHIRLPOOL 518f43e865f9639c2c2e191fca0bfb38db6963d07c6fecd0f0d39e71cd6022ec652bab2ecdb6e3ef50a773c1aaaf4dee7f4370b14f8000f12b7300a64e715d3b
-MISC ChangeLog 9850 SHA256 bf3705d2ad535172911af70e3c3f7ed18003c8bea302cbcbc0615ab5eb6c07d4 SHA512 6a47ea6f6b32fe459287eac152120e277b9e41120331933ab64cbab313f2a6444a949a3eb2ac65dfb571845d5d135680c1d66f1d0286028e62b725d12dc44556 WHIRLPOOL 22eb9b6fb2dd04166e87804acc6df7c08d0c43b098f0b1b912426e4de956e8418ea6f5c1c3f284b9b541012df43facb2fbf8e63c35df45aed7ad9effc28cb7f9
+DIST QtCurve-KDE3-1.8.5.tar.bz2 164800 SHA256 680a57b6124064df0674863a3a2a13642d81f508b29db58bff7255ea5e189048 SHA512 eb88f79462ad491240cec32475419a8a7b84b06a0daff3a323a087fe11dbc09f1b24b14deed2f2bcb179a9a22f9a715342e6c67b092644f5da47065574bd125d WHIRLPOOL 1de8d58705038a849a1af3bf1feaa508464d652b73b397ddd600f10b9758f4dc9f83025b2e965a478c8200208b313aa78025b29dc5350b79cce77b8f82a0b86c
+EBUILD qtcurve-0.69.1.ebuild 843 SHA256 0b892cbc9258fd27d111089ab385c139479ed0bc2ad81e4e239a13bae8eaddce SHA512 96340bc86281f044422097dab7f21e388f9d75611eeb42ecd93fc6c6eb90a05fb9058ac8b59f37b8cb38538786358a7250d802fbf9abb1b81aad8f87566fb4e5 WHIRLPOOL 36675bd7f54300bf9dd0c6fea38b859f1c4142d7f37dca91aaad2b84420f957475a776687ae934d3f74de806c516feff143d296a1465f95219da04ee7bf97ca4
+EBUILD qtcurve-1.8.5.ebuild 975 SHA256 bcc1e94a2ce442b01f1ad95c9724372d90646255d9c0833f2f75f533a9ec08f7 SHA512 cad802b0272504bef686f0328fc6702d9a67b428c5bac9a382bb8b89defa719f834af0cc50f4414a3f44eee0511431f6c5ca85624de12e1ae78093e98982b774 WHIRLPOOL 9fc0626caf367b1dac775a6fa1ec1cc6c095487c255432be620a2890d7ca9aba9a0fb7d598ce0895d3ee7d03059b444620476f068d3c6ef20f95525a0bd2f294
+MISC ChangeLog 10185 SHA256 1251630eb32a924533c930fbd8a7447c82225e858973b6c781522f461d2ae9cf SHA512 f00f62dbf2db7cb206f5621a00debdfc53fc8503be828bd9d4b091e7b090cc1194aa7942150baf6330fcccdd843d0430e538e5c53d62ed161f3a7ed87142315d WHIRLPOOL 8ee8ada4011de897ca3f4e44f1b7bdc7a891d45c73776ee2f03e29b1b9a7abf9a42f095076bd59719064d0df1f4cb2e51cc0131c5495ea09dd2d4f1a8182b756
 MISC metadata.xml 157 SHA256 a2ffc792d4df94c3f8088e329c4bf74804540c2797f3e24ab0030acbdfd4b535 SHA512 9f259ee8df00db96dd396c6c886624c53728c3e26f28071cc1f9a286798271cdfac3485a081d308c93ff3067cb6568f9ea55ca164334abeee776491307244213 WHIRLPOOL bcb16b3d9ab21125e5581aed1225d2b399015d76bc7c6f9deae53e2e38fffdc47e0b5aae9bd632e85db242a37b4de5aa05d6f97c087cad085df9390530a0a597
