@@ -2,6 +2,14 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/x11-themes/qtcurve/ChangeLog,v 1.74 2009/11/08 19:31:13 nixnut Exp $
 
+*qtcurve-1.8.5 (06 Nov 2013)
+
+  06 Nov 2013; Lars Wendler <polynomial-c@gentoo.org> -qtcurve-0.59.2.ebuild,
+  -qtcurve-0.59.5.ebuild, -qtcurve-0.65.2.ebuild, -qtcurve-0.68.1.ebuild,
+  qtcurve-0.69.1.ebuild, +qtcurve-1.8.5.ebuild:
+  Removed all but latest stable ebuild. Added latest upstream KDE3 version.
+  Bumped ebuilds to EAPI-5.
+
   21 Mar 2013; Lars Wendler <polynomial-c@gentoo.org> qtcurve-0.59.2.ebuild,
   qtcurve-0.59.5.ebuild, qtcurve-0.65.2.ebuild, qtcurve-0.68.1.ebuild,
   qtcurve-0.69.1.ebuild:
